initial site files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-  <title>Gif Tastic Cars</title>
+  <title>Gif Tastic Animals</title>
 
   <div class="jumbotron">
         <h1 class="text-center">Gif Tastic Aniamls</h1>
@@ -24,7 +24,12 @@
     <button class="animalButton" data-name="Goat" style="margin: 5px;">Goat</button>
     <button class="animalButton" data-name="Capybara" style="margin: 5px;">Capybara</button>
     <button class="animalButton" data-name="Corgi" style="margin: 5px;">Corgi</button>
+    <button class="animalButton" data-name="Rabbit" style="margin: 5px;">Rabbit</button>
     <button class="animalButton" data-name="Cat" style="margin: 5px;">Cat</button>
+    <button class="animalButton" data-name="Lion" style="margin: 5px;">Lion</button>
+    <button class="animalButton" data-name="Rat" style="margin: 5px;">Rat</button>
+    <button class="animalButton" data-name="Mouse" style="margin: 5px;">Mouse</button>
+    <button class="animalButton" data-name="Dog" style="margin: 5px;">Dog</button>
   </div>
 
   <div id="gifs" style="float:left"></div>
